Update contact information in index.html

--- a/index.html
+++ b/index.html
@@ -80,10 +80,9 @@
   <section id="contact">
     <div class="container">
       <h3>Private Investor Access</h3>
-      <p>WhatsApp: +1 XXX XXX XXXX</p>
-      <p>Discord: info@primeedgecapital.com</p>
-      <a href="Discord:info@primeedgecapital.com" class="btn">Contact Us</a>
-    </div>
+      
+      <p>Discord: primeedgecapital#1234</p>
+<a href="https://discord.gg/yourinvite" class="btn">Contact Us</a>
   </section>
 
   <!-- Footer -->
