Revise contact section with Discord invite link
Updated the contact section to include a link to join the Discord server.

--- a/index.html
+++ b/index.html
@@ -76,14 +76,13 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
   <section id="contact">
-    <div class="container">
-      <h3>Private Investor Access</h3>
-      
-      <p>Discord: primeedgecapital#1234</p>
-<a href="https://discord.gg/yourinvite" class="btn">Contact Us</a>
-  </section>
+  <div class="container">
+    <h3>Private Investor Access</h3>
+    <p><i class="fab fa-discord"></i> Discord: <a href="https://discord.gg/YOUR_INVITE" target="_blank">Join Our Server</a></p>
+    <a href="https://discord.gg/YOUR_INVITE" target="_blank" class="btn">Contact Us</a>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer>
