Update Discord link text in contact section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <section id="contact">
   <div class="container">
     <h3>Private Investor Access</h3>
-    <p><i class="fab fa-discord"></i> Discord: <a href="https://discord.gg/YOUR_INVITE" target="_blank">Join Our Server</a></p>
+    <p><i class="fab fa-discord"></i> Discord: <a href="https://discord.gg/YOUR_INVITE" target="_blank">primeedgecapital</a></p>
     <a href="https://discord.gg/YOUR_INVITE" target="_blank" class="btn">Contact Us</a>
   </div>
 </section>
