Update investment package details and contact info

--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
       <div class="packages">
         <div class="package">
           <h4>Silver Portfolio</h4>
-          <p>Minimum: $500 | Duration: 30 Days | Projected Return: 8–15%</p>
+          <p>Minimum: $500 | Duration: 30 Days | Projected Return: 15–30%</p>
         </div>
         <div class="package">
           <h4>Gold Portfolio</h4>
-          <p>Minimum: $2,500 | Duration: 30–60 Days | Projected Return: 15–30%</p>
+          <p>Minimum: $2,500 | Duration: 30–60 Days | Projected Return: 30–45%</p>
         </div>
         <div class="package">
           <h4>Platinum Portfolio</h4>
           <p>Minimum: $10,000+ | Customized Strategy | Private Allocation</p>
         </div>
       </div>
-      <p><em>*Returns are estimated. Are guaranteed.*</em></p>
+      <p><em>*Returns are estimated,but guaranteed.*</em></p>
     </div>
   </section>
 
@@ -79,10 +79,10 @@
   <section id="contact">
   <div class="container">
     <h3>Private Investor Access</h3>
-    <p><i class="fab fa-discord"></i> Discord: <a href="https://discord.gg/YOUR_INVITE" target="_blank">primeedgecapital</a></p>
-    <a href="https://discord.gg/YOUR_INVITE" target="_blank" class="btn">Contact Us</a>
-  </div>
-</section>
+   <p>Email: info@primeedgecapital9@gmail.com</p>
+      <a href="mailto:info@primeedgecapital9@gmail.com" class="btn">Contact Us</a>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer>
