Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
   <section id="contact">
   <div class="container">
     <h3>Private Investor Access</h3>
-   <p>Email: info@primeedgecapital9@gmail.com</p>
-      <a href="mailto:info@primeedgecapital9@gmail.com" class="btn">Contact Us</a>
+   <p>Email: primeedgecapital9@gmail.com</p>
+      <a href="mailto:primeedgecapital9@gmail.com" class="btn">Contact Us</a>
     </div>
   </section>
 
