Add particle animation with Bitcoin and Ethereum logos

--- a/index.html
+++ b/index.html
@@ -169,3 +169,85 @@ function animate() {
 init();
 animate();
 </script>
+<canvas id="particles"></canvas>
+
+<script>
+const canvas = document.getElementById("particles");
+const ctx = canvas.getContext("2d");
+
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+
+const images = [];
+const btc = new Image();
+btc.src = "https://cryptologos.cc/logos/bitcoin-btc-logo.png";
+images.push(btc);
+
+const eth = new Image();
+eth.src = "https://cryptologos.cc/logos/ethereum-eth-logo.png";
+images.push(eth);
+
+let coins = [];
+
+class Coin {
+  constructor() {
+    this.reset();
+  }
+
+  reset() {
+    this.x = Math.random() * canvas.width;
+    this.y = Math.random() * canvas.height;
+    this.z = Math.random() * 1000;
+    this.size = 40;
+    this.speed = Math.random() * 0.5 + 0.2;
+    this.rotation = Math.random() * 360;
+    this.image = images[Math.floor(Math.random() * images.length)];
+  }
+
+  update() {
+    this.y -= this.speed;
+    this.rotation += 0.2;
+
+    if (this.y < -100) {
+      this.reset();
+      this.y = canvas.height + 100;
+    }
+  }
+
+  draw() {
+    const scale = this.z / 1000;
+    const size = this.size * scale;
+
+    ctx.save();
+    ctx.translate(this.x, this.y);
+    ctx.rotate(this.rotation * Math.PI / 180);
+    ctx.globalAlpha = scale;
+
+    ctx.drawImage(this.image, -size/2, -size/2, size, size);
+    ctx.restore();
+  }
+}
+
+function init() {
+  for (let i = 0; i < 25; i++) {
+    coins.push(new Coin());
+  }
+}
+
+function animate() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  coins.forEach(c => {
+    c.update();
+    c.draw();
+  });
+  requestAnimationFrame(animate);
+}
+
+init();
+animate();
+
+window.addEventListener("resize", () => {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+});
+</script>
