Add Open Graph meta tags to index.html
Added Open Graph meta tags for better social media integration.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
+  <!-- Open Graph Preview -->
+<meta property="og:title" content="PrimeEdge Capital">
+<meta property="og:description" content="Strategic Digital Asset Management">
+<meta property="og:image" content="https://primeedgecapital.github.io/primeedge-landing/IMG_2078.jpeg">
+<meta property="og:url" content="https://primeedgecapital.github.io/primeedge-landing/">
+<meta property="og:type" content="website">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PrimeEdge Capital</title>
